--- a/R/scratch/model_report_v2.Rmd
+++ b/R/scratch/model_report_v2.Rmd
@@ -21,9 +21,10 @@ if (os == "Linux") {
   raw_data_path <- file.path("C:", "Users", user, "Dropbox","SMR_R","raw_data")
 }
 
-post_processing_script_path <<- file.path(r_path,"scratch","functional_PP.R")
-source_smr_function_path <<- file.path(r_path,"scratch","source_SMR_function.R")
-perl_script_path <<-file.path(r_path,"scratch","smr_multiple_users.pl")
+
+post_processing_script_path <<- file.path(r_path,"function_sets","functional_PP.R")
+source_smr_function_path <<- file.path(r_path,"function_sets","source_SMR_function.R")
+perl_script_path <<-file.path(r_path,"function_sets","smr_multiple_users.pl")
 
 # pulling raw data paths in
 validation_data_path <<- file.path(raw_data_path,"validation_data","mfc_cln_filled.csv")
